# CSE180-Robotics

01. RosPackage&NodePublication/CSE180/CSE180/src/lab1/src/: intpublisher.cpp
02, RosTurtleSimulation/CSE180-1/CSE180/src/lab1/src/: intsubscriber.cpp
02, RosTurtleSimulation/CSE180-1/CSE180/src/lab2/: CMakeLists.txt  package.xml
02, RosTurtleSimulation/CSE180-1/CSE180/src/lab2/src/: moveturtle.cpp  posesensor.cpp
03, Gazebo/CSE180-2/CSE180/src/lab1/: CMakeLists.txt  package.xml
03, Gazebo/CSE180-2/CSE180/src/lab3/: CMakeLists.txt  package.xml
03, Gazebo/CSE180-2/CSE180/src/lab3/src/: replicate.cpp
04.Topics&SubscriberWGazebo/CSE180-3/CSE180/src/lab4/: CMakeLists.txt  package.xml
04.Topics&SubscriberWGazebo/CSE180-3/CSE180/src/lab4/src/: drawsquarefb.cpp
06. NodeInfoPublishing/CSE180-4/CSE180/src/lab6/: CMakeLists.txt  package.xml
06. NodeInfoPublishing/CSE180-4/CSE180/src/lab6/src/: replicateoop.cpp
FinalProject/CSE_180_Final_Project/CSE_180_Final_Project/CSE180_FinalProject/: CMakeLists.txt  package.xml
FinalProject/CSE_180_Final_Project/CSE_180_Final_Project/CSE180_FinalProject/include/CSE180_FinalProject/: navigation.hpp
FinalProject/CSE_180_Final_Project/CSE_180_Final_Project/CSE180_FinalProject/src/: navigation.cpp  ournav.cpp  testpackage.cpp
